--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,3 +12,9 @@
         @apply bg-[#234F7E] md:w-60 sm:w-44 w-28 mx-auto sm:py-3 py-1 md:text-base text-xs rounded-full text-white
       }
 }
+.rc-time-picker-clear {
+  @apply hidden !important
+}
+.rc-time-picker-input {
+  @apply h-12 w-full text-lg text-[#234F7E] font-semibold rounded-lg cursor-pointer !important
+}
