--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,5 +16,5 @@
   @apply hidden !important
 }
 .rc-time-picker-input {
-  @apply h-12 w-full text-lg text-[#234F7E] font-semibold rounded-lg cursor-pointer !important
+  @apply md:h-12 h-5 md:pl-4 w-full md:text-lg text-[7px]  text-[#234F7E] font-semibold rounded-lg cursor-pointer !important
 }
