--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,3 +19,6 @@
   @apply md:h-12 h-5 md:pl-4 w-full md:text-lg text-[7px]  text-[#234F7E] font-semibold rounded-lg cursor-pointer !important
 }
 
+img, video {
+  @apply h-full !important
+}
