--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,3 +22,47 @@
 img, video {
   @apply h-full !important
 }
+
+.firebaseui-idp-text {
+  @apply md:text-[14px] text-[7px] !important
+}
+
+.firebaseui-idp-icon {
+  @apply md:w-[18px] w-[10px] !important
+}
+
+.firebaseui-idp-button, .firebaseui-tenant-button {
+  @apply md:min-h-[40px] min-h-0 !important
+}
+
+.firebaseui-title{
+  @apply md:text-[20px] text-[10px] !important
+}
+
+.firebaseui-card-header{
+  @apply md:pt-[16px] md:px-[24px] pt-[10px] px-[16px] md:mb-[16px] mb-[5px] md:h-[60px] h-[40px] !important
+}
+
+.firebaseui-input, .firebaseui-input-invalid {
+  @apply md:text-[16px] text-[10px] !important
+}
+
+.mdl-textfield--floating-label.is-invalid .mdl-textfield__label {
+  @apply md:text-[12px] text-[8px] !important
+}
+
+.firebaseui-button {
+  @apply  md:ml-[8px] md:min-w-[88px] ml-0 min-w-0 md:text-[14px] text-[10px] !important
+}
+
+.firebaseui-subtitle {
+  @apply md:text-[16px] text-[10px] !important
+}
+
+.firebaseui-text{
+  @apply md:text-[16px] text-[10px] !important
+}
+
+.firebaseui-error {
+  @apply md:text-[12px] text-[8px] !important
+}
