--- a/styles/globals.css
+++ b/styles/globals.css
@@ -96,6 +96,7 @@ img, video {
   @apply xs:w-fit xs:text-[10px] md:w-[300px] md:text-[14px] !important
 }
 
-div:has(> span) {
+
+div:has(> a) {
   @apply hidden !important
 }
